# crypto-data

./: .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUG_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  TEST_COVERAGE_AUDIT.md  TRANSACTION_BUGS_DETAILED.md  coverage.json  crypto_universe.db  pyproject.toml  pytest.ini  quality_report_top50_h4_2025.json  quality_report_top50_h4_daily_cmc_2025_08_2026_01.json  quality_report_top60_h4_2022_01_2026_04.json  requirements.txt  setup.py  test_privacy.db  test_universe.db
.github/workflows/: tests.yml  validation.yml
REVIEW/: 2026-04-30_audit-llm_full-repo.md
config/: config.yaml  universe_config.yaml  universe_parquet_config.yaml
docs/: DATA_INTERFACE_SPECIFICATION.md  DATA_READER_README.md  README.md  UNIVERSE_PARQUET.md
docs/plans/: 2026-02-03-strategy-pattern-refactor.md
docs/superpowers/plans/: 2026-04-30-binance-daily-rest-refresh-tbd.md  2026-04-30-binance-gap-repair.md  2026-04-30-cmc-enriched-universe-implementation.md
docs/superpowers/specs/: 2026-04-30-binance-gap-repair-design.md  2026-04-30-cmc-enriched-universe-design.md  2026-05-02-crypto-data-ops-snapshots-design.md
examples/: universe_example.py
notebooks/validation/: data_quality_anomaly_inspector.ipynb  data_quality_inspector.py
scripts/: Download_data_universe.py  check_binance_futures_gap_api.py  check_data_quality_pandera.py  check_duplicates.sql  download_top50_h4_2025.py  download_top50_h4_daily_cmc_2025_08_2026_01.py  download_top60_h4_spot_futures_fundings_2022_01_2026_04.py  fetch_universe.py  inspect_database.py  populate_binance.py  repair_binance_gaps.py  update_universe.py  validate_data_quality.py
src/crypto_data/: __init__.py  binance_downloader.py  binance_importer.py  binance_pipeline.py  binance_repair.py  completeness.py  database.py  database_builder.py  db_write.py  enums.py  gaps.py  import_anomalies.py  ingestion.py  intervals.py  logging_utils.py  quality.py  tables.py  universe.py  universe_filters.py  validation.py
src/crypto_data/binance_datasets/: __init__.py  base.py  funding_rates.py  klines.py  open_interest.py  registry.py
src/crypto_data/clients/: __init__.py  binance_rest.py  binance_vision_async.py  coinmarketcap.py
src/crypto_data/core/: __init__.py  downloader.py  importer.py  orchestrator.py
src/crypto_data/exchanges/: __init__.py  base.py  binance.py
src/crypto_data/ingestion/: __init__.py  binance.py  coinmarketcap.py
src/crypto_data/schemas/: __init__.py  checks.py  funding_rates.py  metrics.py  ohlcv.py  universe.py
src/crypto_data/strategies/: __init__.py  base.py  funding_rates.py  klines.py  open_interest.py  registry.py
src/crypto_data/utils/: __init__.py  config.py  database.py  dates.py  formatting.py  ingestion_helpers.py  runtime.py  symbols.py
tests/: __init__.py  conftest.py  test_database_basic.py  test_dates.py  test_formatting.py  test_logging.py  test_symbols.py  test_sync.py  test_universe_autosync.py  test_universe_transactions.py  test_validation.py
tests/binance/: test_downloader.py  test_importer.py  test_pipeline.py  test_pipeline_repair_flag.py
tests/binance_datasets/: test_base.py  test_funding_rates.py  test_klines.py  test_open_interest.py  test_registry.py
tests/clients/: test_binance_client_async.py  test_binance_funding_rates_download.py  test_binance_metrics_download.py  test_coinmarketcap_client.py  test_download_robustness.py
tests/core/: test_downloader.py  test_importer.py  test_orchestrator.py
tests/database/: test_database_basic.py  test_funding_rates_schema.py  test_open_interest_schema.py
tests/exchanges/: __init__.py  test_base_exchange.py  test_binance_exchange.py
tests/ingestion/: test_binance_1000prefix.py  test_error_handling.py  test_funding_rates_ingestion.py  test_ingestion_helpers.py  test_ingestion_integration.py  test_open_interest_ingestion.py  test_timestamp_detection.py  test_universe_identity.py  test_universe_ingestion.py  test_universe_parsing.py  test_universe_schema.py
tests/internal/: test_shared_metadata.py
tests/orchestration/: test_populate_database.py  test_sync.py
tests/pipeline/: test_create_binance_database.py  test_create_binance_database_repair_flag.py
tests/quality/: test_data_quality_checks.py  test_quality.py  test_quality_enumerator_regression.py
tests/repair/: __init__.py  conftest.py  test_binance_rest_client.py  test_enumerator.py  test_pipeline.py  test_repair_validation.py  test_strategies.py
tests/schemas/: __init__.py  conftest.py  test_custom_checks.py  test_funding_rates_schema.py  test_metrics_schema.py  test_non_strict_validation.py  test_ohlcv_schema.py  test_universe_schema.py
tests/strategies/: test_base_strategy.py  test_funding_rates_strategy.py  test_klines_strategy.py  test_open_interest_strategy.py  test_registry.py
tests/utils/: test_config.py  test_database_exists.py  test_database_import.py  test_dates.py  test_formatting.py  test_funding_rates_import.py  test_logging.py  test_metrics_import.py  test_runtime.py  test_symbols.py  test_universe_filters.py  test_validation_before_import.py
tests/validation/: __init__.py  conftest.py  test_futures_validation.py  test_spot_validation.py  test_universe_validation.py
tests/validation/utils/: __init__.py  binance_api.py  sampling.py
