[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-data"
version = "4.0.0"
description = "DuckDB ingestion pipeline for cryptocurrency market data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Crypto Data Contributors"}
]
requires-python = ">=3.8"
keywords = ["crypto", "cryptocurrency", "binance", "duckdb", "ohlcv", "market-data", "coinmarketcap", "trading", "quant", "finance"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "duckdb>=0.9.0",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "requests-mock>=1.9.0",
    "pandera[strategies]>=0.18.0",
    "ibis-framework[duckdb]>=8.0.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/qu4ant/crypto-data"
Documentation = "https://github.com/qu4ant/crypto-data#readme"
Repository = "https://github.com/qu4ant/crypto-data"
Issues = "https://github.com/qu4ant/crypto-data/issues"
Changelog = "https://github.com/qu4ant/crypto-data/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["src/crypto_data"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
